--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
     "@babel/core": "^7.3.4",
     "@babel/preset-env": "^7.3.4",
     "@types/jest": "^24.0.11",
+    "babel-core": "^7.0.0-bridge.0",
     "eslint": "^5.3.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
     "jest": "^24.3.1"
+  },
+  "dependencies": {
+    "axios": "^0.18.0"
   }
 }
